--- a/inc/css/global/index.css
+++ b/inc/css/global/index.css
@@ -27,5 +27,23 @@ footer {
     padding: 5px;
     margin: 5px;
 }
+.profil {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    border: 2px solid rgb(18, 7, 239);
+    border-radius: 10px;
+}
 
+.profil > .centre {
+    text-align: center;
+}
+
+.profil > .cadre > h2 {
+    padding: 10px 0;
+    margin: 10px 0;
+    border: 2px solid rgb(52, 52, 52);
+    border-left: none;
+    border-right: none;
+}
   
